@@ -49,6 +49,8 @@ struct _Elm_Fileselector_Smart_Data
 
 #ifdef HAVE_EIO
    Eio_File                *current;
+   Eio_Monitor             *monitor;
+   Eina_List               *handlers;
 #endif
 
    Elm_Fileselector_Mode mode;
